[package]
name = "rustfly"
version = "0.1.0-alpha.1"
edition = "2024"

[features]
default = ["native"]
native = []
s3 = []
drive = []
ftp = []
inmemory = []
azure = []
gridfs = []
webdav = []
zip = []
sftp = []
cloudflare = []

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
tokio = { version = "1", features = ["fs", "rt", "macros"] }
tempfile = "3.27.0"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
