[package]
name = "rustfly"
version = "0.1.0-alpha.5"
edition = "2024"

[features]
default = ["native"]
native = []
inmemory = ["dep:rustfly-inmemory"]
s3 = []
drive = []
ftp = []
azure = []
gridfs = []
webdav = []
zip = []
sftp = []
cloudflare = []

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
rustfly-core = { path = "../rustfly-core", version = "0.1.0-alpha.5" }
rustfly-inmemory = { path = "../rustfly-inmemory", version = "0.1.0-alpha.5", optional = true }
tokio = { version = "1", features = ["fs", "rt", "macros"] }
tempfile = "3.27.0"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
